--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,17 @@
 </head>
 <body>
 <h1>My RECIPES!</h1>
+<table>
+    <tr>
+        <th>Id</th>
+        <th>Description</th>
+        <th>Notes</th>
+    </tr>
+    <tr th:each="recipe : ${recipes}">
+        <td th:text="${recipe.id}" style="width: 100px">Id</td>
+        <td th:text="${recipe.description}" style="width: 200px">Description</td>
+        <td th:text="${recipe.notes.getRecipeNotes()}" style="width: 600px"></td>
+    </tr>
+</table>
 </body>
 </html>
